1-ns/oceanrace/ingress-peluan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oceanrace-ingress
  namespace: oceanrace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://umami.publio.online;";
      add_header Set-Cookie "umami-tracking=1; Path=/; Secure; HttpOnly";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
spec:
  ingressClassName: public
  rules:
  - host: oceanrace.peluan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keda-http-proxy
            port:
              number: 8080
  tls:
  - hosts:
    - oceanrace.peluan.com
    secretName: peluan-wildcard-tls
